# skiagrafia

./: .gitignore  FILE_STRUCTURE.md  LICENSE  README.md  main.py  pyproject.toml  run.sh
core/: batch_runner.py  batch_template.py  contracts.py  factory.py  interrogation.py  knowledge.py  orchestrator.py  state_manager.py
models/: grounded_sam.py  moondream_client.py  vitmatte_refiner.py
processors/: image_filter.py  mask_ops.py  output_writer.py  vectorizer.py
tests/: test_contracts.py  test_knowledge_interrogation.py
ui/: main_window.py  mode_switcher.py  theme.py
ui/batch/: batch_view.py  bottom_bar.py  sidebar.py
ui/batch/steps/: step_configure.py  step_import.py  step_interrogate.py  step_output.py  step_progress.py  step_triage.py
ui/preferences/: guide_editor.py  preferences_window.py
ui/single/: canvas_overlays.py  canvas_panel.py  left_panel.py  right_panel.py  single_view.py
utils/: coord_math.py  model_manager.py  mps_utils.py  preferences.py  thumbnail.py
